# camera-projector-calibration

./: .gitignore  README.txt  blob.py  calibration.py  calibrationTsai.py  circlesgrid.py  confidenceMap.py  detect.py  detectCenters.py  disparity.py  findPoints.py  grid.py  infos.txt  main.py  manta.py  match.py  mesures.py  nonLinearSearch.py  party_mix.py  phaseunwrapping.py  scan.py  sgmf.py  test.py  test2.py  tsai.py  tsai_stage2.py  unwrap.sh  util.py  writePoints.py  zhang.py  zhang_avec_damier.py  zhang_avec_tsai_grid.py  zhang_far_range.py
Archive/: calibration.py  mainArchive.py  tsaiArchive.py  tsaiReprojection.py
data/03_12_2020/output/: calibration.txt  cam.xml  cam_.xml  points_camera.txt  points_proj.txt  proj.xml  proj_.xml
data/13_11_2020/louis/output/: cam.xml  proj.xml
data/14_01_2021/output/: cam.xml  erreur.txt  proj.xml
data/14_01_2021/output2/: cam.xml  erreur.txt  proj.xml
menage/: test.py
pu-opencv/: CMakeLists.txt  caca.cpp  main.cpp  phaseunwrapping.cc  phaseunwrapping.cpp  test.cc
pu-opencv/menage/: mesures.py
tools/: detect.py  findPoints.py  sgmf.py  tsai_stage1.py  tsai_stage2.py  util.py
tsai/: tsai_qui_fonctionne_pas.py
unwrapping/: README.txt  camera.py  channelFix.py  confidenceMap.py  phaseshift_generator.xml  phaseshift_matcher.xml  scan.py  scanVimba.py  unwrap.sh  util.py
unwrapping/gros_projecteur/: phaseshift_generator.xml  phaseshift_matcher.xml
unwrapping/louis/: phaseshift_generator.xml  phaseshift_matcher.xml
unwrapping/mini_projecteur/: phaseshift_generator.xml
(+60 files in other folders)
