cmake_minimum_required(VERSION 2.8)
project( unwrap )
find_package( OpenCV REQUIRED )
message("OpenCV version: " ${OpenCV_VERSION})
add_executable( unwrapexe phaseunwrapping.cc )
add_executable( testexe test.cc )
target_link_libraries( unwrapexe ${OpenCV_LIBS} )
target_link_libraries( testexe ${OpenCV_LIBS} )
